<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>foliation_planner</name>
  <version>3.2.0</version>
  <description>Package adds a foliation planner plugin to MoveIt</description>
  <maintainer email="jih189@ucsd.edu">Cogrob Maintainers</maintainer>
  <license>Apache-2.0</license>
  <author>Jiaming Hu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_common</depend>
  <depend>moveit_core</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_visual_tools</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>