<?xml version="1.0"?>
<package format="3">
    <name>fetch_moveit2_config</name>
    <version>1.0.0</version>
    <description>MoveIt2 configuration for Fetch Robot</description>
    <maintainer email="jih189@ucsd.edu">Jiaming Hu</maintainer>
    <author>Jiaming Hu</author>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>moveit_ros_planning_interface</depend>
    <depend>moveit_ros_move_group</depend>
    <depend>moveit_kinematics</depend>
    <depend>moveit_planners_ompl</depend>
    <depend>moveit_ros_visualization</depend>
    <depend>rviz2</depend>
    <depend>rviz_visual_tools</depend> 
    
    <exec_depend>moveit_simple_controller_manager</exec_depend>
    <exec_depend>moveit_configs_utils</exec_depend>
    <exec_depend>pilz_industrial_motion_planner</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>